fix: add max-width: 100% to prevent overflow with width vw

--- a/ui/components/ui/deprecated-networks/index.scss
+++ b/ui/components/ui/deprecated-networks/index.scss
@@ -5,6 +5,9 @@
   $width-screen-md-min: 80vw;
   $width-screen-lg-min: 62vw;
 
+  // prevent overflow-x
+  max-width: 100%;
+
   position: fixed;
   bottom: 0;
   z-index: 1050;
